@@ -4,6 +4,7 @@
 	Fixed editor cursor flicker issue
 	Fixed editor find dialog paste support
 	Fixed editor stability issues with undo/redo
+	Added editor double click to select word
 
 2016-06-12 (0.12.7)
 	Fix infinite loop when printing FUNC with extra args
